correction contrast 1

--- a/style.css
+++ b/style.css
@@ -781,15 +781,15 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-	background-color: #f3976c;
+	background-color: #bf5921;
 }
 
 .tc-white {
-	color: #f3976c;
+	color: #bf5921;
 }
 
 .btn-atomic-tangerine {
-	background: #f3976c;
+	background: #bf5921;
 	color: #ffffff;
 }
 
@@ -807,7 +807,7 @@ h4 {
 }
 
 .ltc-atomic-tangerine {
-	color: #f3976c;
+	color: #bf5921;
 }
 
 .ltc-atomic-tangerine:hover {
